# Mintcoin-Desktop-Wallet

./: Makefile.am  configure.ac  mintcoin-qt.pro
contrib/gitian-descriptors/: boost-linux.yml  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-bitcoin.yml  gitian-osx-depends.yml  gitian-osx-native.yml  gitian-osx-qt.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml  protobuf-win.yml  qt-linux.yml  qt-win.yml
contrib/macdeploy/: custom_dsstore.py  macdeployqtplus
qa/pull-tester/: pull-tester.sh
share/qt/: Info.plist  Info.plist.in
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoinrpc.h  db.h  init.cpp  init.h  kernel.cpp  leveldb.cpp  main.cpp  main.h  makefile.osx  rpcblockchain.cpp  rpcmining.cpp  rpcrawtransaction.cpp  rpcwallet.cpp  txdb-bdb.cpp  txdb-leveldb.h  txdb.cpp  txdb.h  util.cpp  wallet.cpp  wallet.h
src/qt/: Makefile.am  bitcoin.cpp  bitcoin.qrc  bitcoin_locale.qrc  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  coincontroldialog.cpp  coincontroldialog.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.mm  overviewpage.cpp  overviewpage.h  paymentserver.cpp  paymentserver.h  splashscreen.cpp  splashscreen.h  transactionfilterproxy.cpp  transactionfilterproxy.h  transactionview.cpp  transactionview.h  walletmodel.cpp  walletmodel.h
src/qt/forms/: coincontroldialog.ui  intro.ui  overviewpage.ui
src/qt/res/icons/: MintCoin.icns
src/qt/res/style/: styles.qss
src/qt/test/: Makefile.am
src/test/: Makefile.am
